--- a/imooc_guolin/res/layout/activity_contact.xml
+++ b/imooc_guolin/res/layout/activity_contact.xml
@@ -2,23 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/contacts_list_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:scrollbars="none"
-        android:fadingEdge="none" >
-    </ListView>
+        android:fadingEdge="none"
+        android:scrollbars="none"></ListView>
 
     <LinearLayout
         android:id="@+id/title_layout"
         android:layout_width="fill_parent"
         android:layout_height="18dip"
         android:layout_alignParentTop="true"
-        android:background="#303030" >
+        android:background="#303030">
 
         <TextView
             android:id="@+id/title"
@@ -26,34 +25,32 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="10dip"
-            android:textColor="#ffffff"
+            android:textColor="#f00"
             android:textSize="13sp" />
     </LinearLayout>
-    
-    <Button 
+
+    <Button
         android:id="@+id/alphabetButton"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
-        android:background="@drawable/a_z"
-        />
-    
-    <RelativeLayout 
+        android:background="@drawable/a_z" />
+
+    <RelativeLayout
         android:id="@+id/section_toast_layout"
         android:layout_width="70dip"
         android:layout_height="70dip"
         android:layout_centerInParent="true"
         android:background="@drawable/section_toast"
-        android:visibility="gone"
-        >
-        <TextView 
+        android:visibility="gone">
+
+        <TextView
             android:id="@+id/section_toast_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#fff"
-            android:textSize="30sp"
-            />
+            android:textSize="30sp" />
     </RelativeLayout>
 
 </RelativeLayout>
